[Client] Fix episodes list mobile overflow

--- a/client/resources/sass/components/_modal.scss
+++ b/client/resources/sass/components/_modal.scss
@@ -9,10 +9,13 @@
 }
 
 .modal-wrap {
+  display: flex;
   left: 50%;
   max-width: 550px;
+  max-height: 100svh;
   position: fixed;
   top: 10%;
+  flex-direction: column;
   transform: translateX(-50%);
   width: 100%;
   box-shadow: 0 5px 20px 0 rgba(#000, .6);
@@ -136,7 +139,7 @@
   overflow: auto;
 
   @include media(4) {
-    max-height: calc(100vh - 150px);
+    max-height: 100%;
   }
 }
 
